--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <label for="agree">Accept terms and conditions</label>
     </div>
     <div class="form-box choose-gender">
-      <input type="radio" id="male" name="gender" />
+      <input type="radio" id="male" name="gender" checked />
       <label for="male">Male</label>
       <input type="radio" id="female" name="gender" />
       <label for="female">Female</label>
