--- a/index.html
+++ b/index.html
@@ -12,32 +12,34 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="form-box">
-      <input type="text" name="lastName" value="Emerson" />
-    </div>
-    <div class="form-box">
-      <input type="number" name="age" value="17" />
-    </div>
-    <div class="form-box">
-      <input type="checkbox" id="agree" name="agree" />
-      <label for="agree">Accept terms and conditions</label>
-    </div>
-    <div class="form-box choose-gender">
-      <input type="radio" id="male" name="gender" checked />
-      <label for="male">Male</label>
-      <input type="radio" id="female" name="gender" />
-      <label for="female">Female</label>
-      <input type="radio" id="secret" name="gender" />
-      <label for="secret">Secret</label>
-    </div>
-    <div class="form-box">
-      <textarea
-        name="description"
-        placeholder="Write description..."
-      ></textarea>
-    </div>
-    <div class="form-box">
-      <button type="submit">Submit</button>
-    </div>
+    <form>
+      <div class="form-box">
+        <input type="text" name="lastName" value="Emerson" />
+      </div>
+      <div class="form-box">
+        <input type="number" name="age" value="17" />
+      </div>
+      <div class="form-box">
+        <input type="checkbox" id="agree" name="agree" />
+        <label for="agree">Accept terms and conditions</label>
+      </div>
+      <div class="form-box choose-gender">
+        <input type="radio" id="male" name="gender" checked />
+        <label for="male">Male</label>
+        <input type="radio" id="female" name="gender" />
+        <label for="female">Female</label>
+        <input type="radio" id="secret" name="gender" />
+        <label for="secret">Secret</label>
+      </div>
+      <div class="form-box">
+        <textarea
+          name="description"
+          placeholder="Write description..."
+        ></textarea>
+      </div>
+      <div class="form-box">
+        <button type="submit">Submit</button>
+      </div>
+    </form>
   </body>
 </html>
